# real-time-captions

./: .gitignore  LICENSE  README.md  pyproject.toml  start.vbs
src/real_time_captions/: __init__.py  args.py  bootstrap.py  capture.py  hardware_utils.py  logging_config.py  transcriber.py  worker.py  writer.py
src/real_time_captions/gui/: __init__.py  config.py  subtitle_display_widget.py  subtitle_window.py  ui_components.py  window_flasher.py  worker.py
